# hypertyper

./: COPYRIGHT  Cargo.toml  README.md
src/: auth.rs  lib.rs  service.rs
src/service/: testing.rs
tests/data/input/: user.json
