[package]
name = "hypertyper"
version = "0.1.0"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
description = "Useful types and idioms (and a few implementations) for HTTP/S clients"
#documentation = "https://docs.rs/hypertyper"
#readme = "README.md"
#repository = "https://github.com/mdippery/hypertyper"
keywords = ["http", "networking", "web"]
categories = ["network-programming", "web-programming::http-client"]
license = "MIT"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
reqwest = "0.12.23"
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
regex = "1.11.3"
