[package]
name = "hypertyper"
version = "0.3.0"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
description = "Useful types and idioms (and a few implementations) for building HTTP/S clients"
documentation = "https://docs.rs/hypertyper"
readme = "README.md"
repository = "https://github.com/mdippery/hypertyper"
#homepage
keywords = ["http", "networking", "web"]
categories = ["network-programming", "web-programming::http-client"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.1"

[features]
test-utils = []

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
regex = "1.11.3"
temp-env = "0.3.6"
tokio = { version = "1.48.0", features = ["macros"] }
